2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: merge module_flags and modules_flags,
	spotted by Frederic Crozat

2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences):
	Work-around a problem with libglade not putting the prefs window
	on top of the main window when the main window is "On Top"
	(Closes: #336939)

2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* data/skip_to.glade: make centered on parent
	* src/totem-skipto.c: (totem_skipto_update_range),
	(totem_skipto_get_range), (totem_skipto_set_seekable),
	(totem_skipto_new): add more asserts, set the sensitivity of the OK
	button properly
	* src/totem-skipto.h: fix some macros
	* src/totem.c: (totem_action_exit), (on_skip_to1_activate): don't
	destroy the playlist by hand, it's already destroyed along with the
	rest of the main window, hide the prefs window as well before exiting
	Use the convenience functions to locate the skipto glade file

2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (test_parsing), (main):
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
	(totem_pl_parser_set_property), (totem_pl_parser_get_property),
	(my_gnome_vfs_get_mime_type_with_data),
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_parse_internal): Add a debugging property to
	the playlist parser to make it easier to debug

2006-04-12  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_finalize): patch from Christoph
	Burghardt <hawkes@web.de> to fix a small memory leak

2006-04-11  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: now we update bacon-volume from libbacon itself

2006-04-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in: use po/LINGUAS file instead of changing ALL_LINGUAS
	in configure.in

2006-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_take_screenshot1_activate),